crates/swc_ecma_parser/tests/test262-error-references/fail/d012888b0c720723.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/d012888b0c720723.js:1:1
  |
1 | ( { get x() {} } ) = 0
  | ^^^^^^^^^^^^^^^^^^

